src/test/resources/org/xmlcml/www/cmlcomp/invalid/undefined-molecule.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml
    convention="conventions:cmlcomp"
    cmlx:note="A cmlcomp containing undefined cmlcomp element, i.e. molecule, is invalid."
    xmlns="http://www.xml-cml.org/schema"
    xmlns:conventions="http://www.xml-cml.org/convention/"
    xmlns:cmlx="http://www.xml-cml.org/schema/cmlx">
    <molecule></molecule>
</cml>